--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </div>
             <div class="weatherNumber">
               <div class="temp">
-                <p>temperature</p>
+                <p>temperature:</p>
                 <p class="tempData">100 °C</p>
               </div>
               <div class="humidity">
-                <p>humidity</p>
+                <p>humidity:</p>
                 <p class="humidityData">100 %</p>
               </div>
             </div>
